Source/WebCore/html/HTMLMediaElement.cpp
@@ -447,6 +447,7 @@ HTMLMediaElement::HTMLMediaElement(const QualifiedName& tagName, Document& docum
     , m_mediaControlsDependOnPageScaleFactor(false)
     , m_haveSetUpCaptionContainer(false)
     , m_isScrubbingRemotely(false)
+    , m_showPoster(true)
 #if ENABLE(VIDEO_TRACK)
     , m_tracksAreReady(true)
     , m_haveVisibleTextTrack(false)
@@ -1140,7 +1141,6 @@ void HTMLMediaElement::prepareForLoad()
     m_haveFiredLoadedData = false;
     m_completelyLoaded = false;
     m_havePreparedToPlay = false;
-    m_displayMode = Unknown;
     m_currentSrc = URL();
 
 #if ENABLE(WIRELESS_PLAYBACK_TARGET)
@@ -1246,7 +1246,7 @@ void HTMLMediaElement::selectMediaResource()
     m_networkState = NETWORK_NO_SOURCE;
 
     // 2. Set the element’s show poster flag to true.
-    setDisplayMode(Poster);
+    setShowPosterFlag(true);
 
     // 3. Set the media element’s delaying-the-load-event flag to true (this delays the load event).
     setShouldDelayLoadEvent(true);
@@ -1494,9 +1494,6 @@ void HTMLMediaElement::loadResource(const URL& initialURL, ContentType& contentT
     bool privateMode = document().page() && document().page()->usesEphemeralSession();
     m_player->setPrivateBrowsingMode(privateMode);
 
-    // Reset display mode to force a recalculation of what to show because we are resetting the player.
-    setDisplayMode(Unknown);
-
     if (!autoplay() && !m_havePreparedToPlay)
         m_player->setPreload(m_mediaSession->effectivePreloadForElement());
     m_player->setPreservesPitch(m_webkitPreservesPitch);
@@ -1550,11 +1547,7 @@ void HTMLMediaElement::loadResource(const URL& initialURL, ContentType& contentT
     if (!loadAttempted && !m_player->load(url, contentType, keySystem))
         mediaLoadingFailed(MediaPlayer::NetworkState::FormatError);
 
-    // If there is no poster to display, allow the media engine to render video frames as soon as
-    // they are available.
-    updateDisplayState();
-
-    updateRenderer();
+    mediaPlayerRenderingModeChanged();
 }
 
 #if ENABLE(VIDEO_TRACK)
@@ -2047,10 +2040,14 @@ void HTMLMediaElement::waitForSourceChange()
     // 6.17 - Waiting: Set the element's networkState attribute to the NETWORK_NO_SOURCE value
     m_networkState = NETWORK_NO_SOURCE;
 
-    // 6.18 - Set the element's delaying-the-load-event flag to false. This stops delaying the load event.
+    // 6.18 - Set the element's show poster flag to true.
+    setShowPosterFlag(true);
+
+    // 6.19 -  Queue a media element task given the media element given the element to set the
+    // element's delaying-the-load-event flag to false. This stops delaying the load event.
+    // FIXME: this should be done in a task queue
     setShouldDelayLoadEvent(false);
 
-    updateDisplayState();
     updateRenderer();
 }
 
@@ -2079,6 +2076,9 @@ void HTMLMediaElement::noneSupported()
     // 6.3 - Set the element's networkState attribute to the NETWORK_NO_SOURCE value.
     m_networkState = NETWORK_NO_SOURCE;
 
+    // 6.4 - Set the element's show poster flag to true.
+    setShowPosterFlag(true);
+
     // 7 - Queue a task to fire a simple event named error at the media element.
     scheduleEvent(eventNames().errorEvent);
 
@@ -2094,7 +2094,6 @@ void HTMLMediaElement::noneSupported()
     // 9 - Abort these steps. Until the load() method is invoked or the src attribute is changed,
     // the element won't attempt to load another resource.
 
-    updateDisplayState();
     updateRenderer();
 }
 
@@ -2207,8 +2206,6 @@ void HTMLMediaElement::mediaLoadingFailed(MediaPlayer::NetworkState error)
         mediaLoadingFailedFatally(error);
     else if ((error == MediaPlayer::NetworkState::FormatError || error == MediaPlayer::NetworkState::NetworkError) && m_loadState == LoadingFromSrcAttr)
         noneSupported();
-
-    updateDisplayState();
 
     ERROR_LOG(LOGIDENTIFIER, "error = ", static_cast<int>(error));
 
@@ -2416,8 +2413,6 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
         m_mediaSession->clientCharacteristicsChanged();
     }
 
-    bool shouldUpdateDisplayState = false;
-
     if (m_readyState >= HAVE_CURRENT_DATA && oldState < HAVE_CURRENT_DATA) {
         if (!m_haveFiredLoadedData) {
             m_haveFiredLoadedData = true;
@@ -2425,16 +2420,13 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
             // FIXME: It's not clear that it's correct to skip these two operations just
             // because m_haveFiredLoadedData is already true. At one time we were skipping
             // the call to setShouldDelayLoadEvent, which was definitely incorrect.
-            shouldUpdateDisplayState = true;
             applyMediaFragmentURI();
         }
         setShouldDelayLoadEvent(false);
     }
 
-    if (m_readyState == HAVE_FUTURE_DATA && oldState <= HAVE_CURRENT_DATA && tracksAreReady) {
+    if (m_readyState == HAVE_FUTURE_DATA && oldState <= HAVE_CURRENT_DATA && tracksAreReady)
         scheduleEvent(eventNames().canplayEvent);
-        shouldUpdateDisplayState = true;
-    }
 
     if (m_readyState == HAVE_ENOUGH_DATA && oldState < HAVE_ENOUGH_DATA && tracksAreReady) {
         if (oldState <= HAVE_CURRENT_DATA)
@@ -2445,6 +2437,7 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
         auto success = canTransitionFromAutoplayToPlay();
         if (success) {
             m_paused = false;
+            setShowPosterFlag(false);
             invalidateCachedTime();
             setAutoplayEventPlaybackState(AutoplayEventPlaybackState::StartedWithoutUserGesture);
             m_playbackStartedTime = currentMediaTime().toDouble();
@@ -2453,8 +2446,6 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
             ALWAYS_LOG(LOGIDENTIFIER, "Autoplay blocked, user gesture required");
             setAutoplayEventPlaybackState(AutoplayEventPlaybackState::PreventedAutoplay);
         }
-
-        shouldUpdateDisplayState = true;
     }
 
     // If we transition to the Future Data state and we're about to begin playing, ensure playback is actually permitted first,
@@ -2467,9 +2458,6 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
         pauseInternal();
         setAutoplayEventPlaybackState(AutoplayEventPlaybackState::PreventedAutoplay);
     }
-
-    if (shouldUpdateDisplayState)
-        updateDisplayState();
 
     updatePlayState();
     updateMediaController();
@@ -2894,7 +2882,7 @@ void HTMLMediaElement::seekWithTolerance(const MediaTime& inTime, const MediaTim
     MediaTime time = inTime;
 
     // 1 - Set the media element's show poster flag to false.
-    setDisplayMode(Video);
+    setShowPosterFlag(false);
 
     // 2 - If the media element's readyState is HAVE_NOTHING, abort these steps.
     if (m_readyState == HAVE_NOTHING || !m_player)
@@ -2993,7 +2981,7 @@ void HTMLMediaElement::seekTask()
     // Don't skip calling the media engine if 1) we are in poster mode (because a seek should always cancel
     // poster display), or 2) if there is a pending fast seek, or 3) if this seek is not an exact seek
     SeekType thisSeekType = (negativeTolerance == MediaTime::zeroTime() && positiveTolerance == MediaTime::zeroTime()) ? Precise : Fast;
-    if (!noSeekRequired && time == now && thisSeekType == Precise && m_pendingSeekType != Fast && displayMode() != Poster)
+    if (!noSeekRequired && time == now && thisSeekType == Precise && m_pendingSeekType != Fast && !showPosterFlag())
         noSeekRequired = true;
 
 #if ENABLE(MEDIA_SOURCE)
@@ -3474,6 +3462,7 @@ void HTMLMediaElement::playInternal()
 
     if (m_paused) {
         m_paused = false;
+        setShowPosterFlag(false);
         invalidateCachedTime();
 
         // This avoids the first timeUpdated event after playback starts, when currentTime is still
@@ -4939,7 +4928,6 @@ void HTMLMediaElement::mediaPlayerResourceNotSupported()
 void HTMLMediaElement::mediaPlayerRepaint()
 {
     beginProcessingMediaPlayerCallback();
-    updateDisplayState();
     if (auto* renderer = this->renderer())
         renderer->repaint();
     endProcessingMediaPlayerCallback();
@@ -5064,18 +5052,6 @@ void HTMLMediaElement::mediaPlayerEngineUpdated()
     scheduleMediaEngineWasUpdated();
 }
 
-void HTMLMediaElement::mediaPlayerFirstVideoFrameAvailable()
-{
-    INFO_LOG(LOGIDENTIFIER, "current display mode = ", (int)displayMode());
-
-    beginProcessingMediaPlayerCallback();
-    if (displayMode() == PosterWaitingForVideo) {
-        setDisplayMode(Video);
-        mediaPlayerRenderingModeChanged();
-    }
-    endProcessingMediaPlayerCallback();
-}
-
 void HTMLMediaElement::mediaPlayerCharacteristicChanged()
 {
     INFO_LOG(LOGIDENTIFIER);
@@ -5087,10 +5063,8 @@ void HTMLMediaElement::mediaPlayerCharacteristicChanged()
         markCaptionAndSubtitleTracksAsUnconfigured(AfterDelay);
 #endif
 
-    if (potentiallyPlaying() && displayMode() == PosterWaitingForVideo) {
-        setDisplayMode(Video);
+    if (potentiallyPlaying())
         mediaPlayerRenderingModeChanged();
-    }
 
     updateRenderer();
 
@@ -5331,7 +5305,6 @@ void HTMLMediaElement::updatePlayState()
     if (shouldBePlaying) {
         schedulePlaybackControlsManagerUpdate();
 
-        setDisplayMode(Video);
         invalidateCachedTime();
 
         if (playerPaused) {
@@ -5468,11 +5441,11 @@ void HTMLMediaElement::userCancelledLoad()
 #endif
 
     // 4 - If the media element's readyState attribute has a value equal to HAVE_NOTHING, set the
-    // element's networkState attribute to the NETWORK_EMPTY value and queue a task to fire a
-    // simple event named emptied at the element. Otherwise, set the element's networkState
-    // attribute to the NETWORK_IDLE value.
+    // element's networkState attribute to the NETWORK_EMPTY value, set the element's show poster
+    // flag to true, and fire an event named emptied at the element.
     if (m_readyState == HAVE_NOTHING) {
         m_networkState = NETWORK_EMPTY;
+        setShowPosterFlag(true);
         scheduleEvent(eventNames().emptiedEvent);
     }
     else
