Source/WebCore/html/HTMLMediaElement.h
@@ -599,10 +599,6 @@ protected:
 
     void didMoveToNewDocument(Document& oldDocument, Document& newDocument) override;
 
-    enum DisplayMode { Unknown, None, Poster, PosterWaitingForVideo, Video };
-    DisplayMode displayMode() const { return m_displayMode; }
-    virtual void setDisplayMode(DisplayMode mode) { m_displayMode = mode; }
-    
     bool isMediaElement() const final { return true; }
 
     RenderPtr<RenderElement> createElementRenderer(RenderStyle&&, const RenderTreePosition&) override;
@@ -614,6 +610,9 @@ protected:
     void updateMediaControlsAfterPresentationModeChange();
 
     void scheduleEvent(const AtomString&);
+
+    bool showPosterFlag() const { return m_showPoster; }
+    void setShowPosterFlag(bool flag) { m_showPoster = flag; }
 
 private:
     void createMediaPlayer();
@@ -643,8 +642,6 @@ private:
     
     void visibilityStateChanged() final;
 
-    virtual void updateDisplayState() { }
-    
     void setReadyState(MediaPlayer::ReadyState);
     void setNetworkState(MediaPlayer::NetworkState);
 
@@ -670,7 +667,6 @@ private:
     void scheduleMediaEngineWasUpdated();
     void mediaEngineWasUpdated();
 
-    void mediaPlayerFirstVideoFrameAvailable() final;
     void mediaPlayerCharacteristicChanged() final;
 
 #if ENABLE(LEGACY_ENCRYPTED_MEDIA)
@@ -1034,8 +1030,6 @@ private:
 
     MediaPlayer::Preload m_preload { Preload::Auto };
 
-    DisplayMode m_displayMode { Unknown };
-
     // Counter incremented while processing a callback from the media player, so we can avoid
     // calling the media engine recursively.
     int m_processingMediaPlayerCallback { 0 };
@@ -1112,6 +1106,8 @@ private:
 
     bool m_isScrubbingRemotely : 1;
     bool m_waitingToEnterFullscreen : 1;
+
+    bool m_showPoster : 1;
 
 #if ENABLE(VIDEO_TRACK)
     bool m_tracksAreReady : 1;
